Add mariadb support (#42)
* Add mariadb support
* Update deprecated code